# react_fastapi_todos

backend/: .gitignore  main.py  pyproject.toml
backend/src/: main.py
backend/src/database/: database.py
backend/src/models/: tables.py  todo.py  todos.py  users.py
backend/src/routers/: todo.py  todos.py  users.py
backend/src/schemas/: todos.py  users.py
backend/src/services/: todos.py  users.py
